<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.nspk</groupId>
    <artifactId>at-library-core-example</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>at-library-core-example</name>

    <dependencies>
        <dependency>
            <groupId>ru.bcs</groupId>
            <artifactId>at-library-core</artifactId>
            <version>21.04.2019-test2</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <name>s-cicd-artif-01.global.bcs-snapshots</name>
            <url>https://artifactory.gitlab.bcs.ru/artifactory/bcs-main-snapshots</url>
        </snapshotRepository>
        <repository>
            <id>bcs-main-releases</id>
            <url>https://artifactory.gitlab.bcs.ru/artifactory/bcs-main-releases</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>bcs-main-releases</id>
            <url>https://artifactory.gitlab.bcs.ru/artifactory/bcs-main-releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>snapshots</id>
            <name>s-cicd-artif-01.global.bcs-snapshots</name>
            <url>https://artifactory.gitlab.bcs.ru/artifactory/bcs-main-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <threadCount>1</threadCount>
                    <parallel>classes</parallel>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.1/aspectjweaver-1.9.1.jar"
                        -Dcucumber.options="
                        --plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
                    </argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>1.9.1</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>2.9.0</reportVersion>
                    <resultsDirectory>allure-results</resultsDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>